--- a/simple_card/web/index.html
+++ b/simple_card/web/index.html
@@ -10,7 +10,7 @@
 <body class="flex justify-center items-center bg-primary h-screen p-7">
     
     <div class="flex flex-col sm:flex-row bg-card-body p-6 sm:p-8 max-w-sm sm:max-w-3xl rounded-lg font-poppins">
-        <div class="min-w-80 sm:min-w-64 min-h-72 sm:min-h-60 bg-cover-photo bg-no-repeat bg-cover rounded-lg mb-6 sm:mb-0 sm:mr-9" alt=""></div>
+        <div class="min-w-80 sm:min-w-64 min-h-72 sm:min-h-60 bg-cover-photo bg-no-repeat bg-cover rounded-lg mb-6 sm:mb-0 sm:mr-9 opacity-95"></div>
         <div class="sm:flex sm:flex-col sm:justify-end sm:items-start">
             <h2 class="text-3xl text-white mb-7">An Above Average Experience</h2>
             <p class="text-gray-400 mb-6">Travel to the premiere mountain tops of New Zealand with our guided tours. Take in the majestic scenary and witness beauty.</p>
