--- a/web/projects/simple_card/index.html
+++ b/web/projects/simple_card/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Card</title>
-    <link rel="stylesheet" href="/tailwind.css">
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
 </head>
 <body class="flex justify-center items-center bg-primary h-screen p-7">
     
