--- a/web/index.html
+++ b/web/index.html
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma-to-Code Challenge - Projects</title>
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
 </head>
-<body>
+<body class="flex justify-center items-center h-screen">
     
-    <div>
-        <h1>Figma-to-Code Challenge - Projects</h1>
+    <div class="flex flex-col gap-8">
+        <h1 class="text-center text-2xl">Figma-to-Code Challenge - Projects</h1>
         
-        <div>
-            <a href="/projects/simple_card">Simple Card</a>
+        <div class="flex gap-4">
+            <a href="/projects/simple_card" class="home-card-link">Simple Card</a>
+
+            <a href="/projects/simple_landing_page" class="home-card-link">Simple Landing Page</a>
+
+            <a href="/projects/analytics_dashboard" class="home-card-link">Analytics Dashboard</a>
         </div>
     </div>
 </body>
