Add analytics dashboard image

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,11 @@
         <h1 class="text-center text-2xl">Figma-to-Code Challenge - Projects</h1>
         
         <div class="flex gap-4">
-            <a href="/projects/simple_card" class="home-card-link">Simple Card</a>
+            <a href="/pages/simple_card" class="home-card-link">Simple Card</a>
 
-            <a href="/projects/simple_landing_page" class="home-card-link">Simple Landing Page</a>
+            <a href="/pages/simple_landing_page" class="home-card-link">Simple Landing Page</a>
 
-            <a href="/projects/analytics_dashboard" class="home-card-link">Analytics Dashboard</a>
+            <a href="/pages/analytics_dashboard" class="home-card-link">Analytics Dashboard</a>
         </div>
     </div>
 </body>
