--- a/web/pages/analytics_dashboard/index.html
+++ b/web/pages/analytics_dashboard/index.html
@@ -7,20 +7,20 @@
     <title>Data Analytics Dashboard</title>
     <link rel="stylesheet" href="/assets/css/tailwind.css">
 </head>
-<body class="bg-gradient-to-r from-blue-600 via-purple-600 to-purple-400 text-white flex justify-between items-center h-screen">
-    <div class="flex flex-col justify-between h-screen bg-gray-700 w-full">
-        <header class="flex justify-between px-6 pt-4">
-            <div class="drawer flex flex-col font-bold">
-                <span class="border-b-2 border-white h-1 w-5 mb-0.5"></span>
-                <span class="border-b-2 h-1 mb-0.5"></span>
-                <span class="border-b-2 h-1"></span>
-            </div>
-            <div><img src="" alt="" class="logo"></div>
+<body class="text-white flex justify-between items-center h-screen bg-dashboard-mobile md:bg-dashboard-not-mobile bg-cover bg-center">
+    <div class="flex flex-col justify-between h-screen w-full">
+        <header class="flex justify-between items-center px-6 pt-4">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+            <a href="" class="uppercase font-extrabold text-2xl text-blue-500 flex-grow text-center">
+                logo
+            </a>
         </header>
         <div class="main px-9 flex flex-col gap-8">
             <h1 class="text-5xl font-poppins font-bold uppercase">Data Analytics</h1>
-            <p class="text-3xl text-gray-400 font-poppins font-light">Making sense of your traffic</p>
-            <a href="" class="flex items-center gap-4 self-start border border-gray-500 hover:text-gray-300 transition duration-200 px-5 py-5">
+            <p class="text-3xl text-gray-500 font-poppins font-light">Making sense of your traffic</p>
+            <a href="" class="flex items-center gap-4 self-start border border-gray-600 hover:text-gray-300 transition duration-200 px-4 py-4">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
                 </svg>
